memory leak fix. multiple intent screens, fix navigation.

--- a/app/src/main/res/layout/activity_add_user_event.xml
+++ b/app/src/main/res/layout/activity_add_user_event.xml
@@ -1,198 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/offwhite"
-    android:fitsSystemWindows="false">
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/topAppBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/phinmaGreen"
+        android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
+        app:navigationIcon="@drawable/ic_back"
+        app:navigationIconTint="@android:color/white"
+        app:title="Events"
+        app:titleTextColor="@color/phinmaYellow" />
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:backgroundTint="@color/white"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="4dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/phinmaGreen"
-            android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:menu="@menu/top_app_bar_menu"
-            app:navigationIcon="@drawable/ic_menu"
-            app:navigationIconTint="@android:color/white"
-            app:title="Events"
-            app:titleTextAppearance="@style/CustomTopAppBarTitle"
-            app:titleTextColor="@color/phinmaYellow" />
-        <!--      ^^^  FORBIDDEN ZONE^^^^^-->
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginVertical="15dp"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="124dp"
+                android:layout_height="32dp"
+                android:layout_marginBottom="15dp"
+                android:text="New Event"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/josefinsans_bold"
+                android:textColor="@color/black" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="30dp"
-            android:background="@color/white"
-            android:backgroundTint="@color/white"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:fontFamily="@font/merriweather_bold"
+                android:textColor="@color/black" />
 
+            <EditText
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:fontFamily="@font/merriweather_bold"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:id="@+id/eventDesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Date"
+                android:fontFamily="@font/merriweather_bold"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:id="@+id/addDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="false"
+                android:gravity="center"
+                android:hint="YYYY-MM-DD"
+                android:textColor="@color/black"
+                android:textColorHint="@color/custom_gray" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Location"
+                android:fontFamily="@font/merriweather_bold"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:id="@+id/location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:background="@color/white"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:layout_marginVertical="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.5">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="124dp"
-                    android:layout_height="32dp"
-                    android:text="New Event"
-                    android:fontFamily="@font/josefinsans_bold"
-                    android:textColor="@color/black"
-                    android:layout_marginBottom="15dp"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-                <TextView
+                <Button
+                    android:id="@+id/saveBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_bold"
-                    android:text="Title"
-                    android:textColor="@color/black" />
+                    android:layout_marginEnd="5dp"
+                    android:backgroundTint="@color/phinmaGreen"
+                    android:text="Save"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/merriweather_bold" />
 
-                <EditText
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black" />
-
-                <TextView
+                <Button
+                    android:id="@+id/clearBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_bold"
-                    android:text="Description"
-                    android:textColor="@color/black" />
-
-                <EditText
-                    android:id="@+id/eventDesc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_bold"
-                    android:text="Date"
-                    android:textColor="@color/black" />
-
-                <EditText
-                    android:id="@+id/addDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="false"
-                    android:gravity="center"
-                    android:hint="YYYY-MM-DD"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/custom_gray" />
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Location"
-                    android:fontFamily="@font/merriweather_bold"
-                    android:textColor="@color/black" />
-
-                <EditText
-                    android:id="@+id/location"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black" />
-
-                <LinearLayout
-                    android:layout_marginTop="15dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/saveBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Save"
-                        android:layout_marginEnd="5dp"
-                        android:fontFamily="@font/merriweather_bold"
-                        android:backgroundTint="@color/phinmaGreen"
-                        android:textColor="@color/white" />
-
-                    <Button
-                        android:id="@+id/clearBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/merriweather_bold"
-                        android:layout_marginStart="5dp"
-                        android:text="Clear"
-                        android:backgroundTint="@color/phinmaGreen"
-                        android:textColor="@color/white" />
-
-                </LinearLayout>
-
+                    android:layout_marginStart="5dp"
+                    android:backgroundTint="@color/phinmaGreen"
+                    android:text="Clear"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/merriweather_bold" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-
-        <!--  vvvvv      FORBIDDEN ZONE   vvvvvvvvvvvv-->
-
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            style="@style/BottomNavigationView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
-        style="@style/SideDrawerView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start" />
-</androidx.drawerlayout.widget.DrawerLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
