--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -1,164 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/offwhite"
-    android:fitsSystemWindows="false">
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- Simple Top App Bar with back button and title -->
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/topAppBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/phinmaGreen"
+        app:navigationIcon="@drawable/ic_back"
+        app:navigationIconTint="@color/white"
+        app:title="Event Details"
+        app:titleTextColor="@color/phinmaYellow" />
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
+    <!-- Scrollable content area -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/phinmaGreen"
-            app:titleTextAppearance="@style/CustomTopAppBarTitle"
-            android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:menu="@menu/top_app_bar_menu"
-            app:navigationIcon="@drawable/ic_menu"
-            app:navigationIconTint="@android:color/white"
-            app:title="Events"
-            app:titleTextColor="@color/phinmaYellow" />
-        <!--      ^^^  FORBIDDEN ZONE^^^^^-->
+            android:layout_margin="30dp"
+            android:background="@color/white"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="4dp">
 
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/offwhite"
-            app:layout_constraintTop_toBottomOf="@id/topAppBar"
-            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
-            android:fillViewport="true">
-
-
-            <androidx.cardview.widget.CardView
-                android:background="@color/white"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="4dp"
-                android:layout_gravity="center" >
+                android:orientation="vertical"
+                android:padding="16dp">
 
-
-                <LinearLayout
+                <!-- Event Title -->
+                <TextView
+                    android:id="@+id/title"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/josefinsans_regular"
+                    android:text="Event Title"
+                    android:textColor="@color/black"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    tools:ignore="HardcodedText" />
+
+                <!-- Date and Time -->
+                <TextView
+                    android:id="@+id/dateTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/merriweather_regular"
+                    android:text="Date and Time"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    tools:ignore="HardcodedText" />
+
+                <!-- Location -->
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/merriweather_regular"
+                    android:text="Location"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    tools:ignore="HardcodedText" />
+
+                <!-- Event Description -->
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/merriweather_regular"
+                    android:text="Event Description"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="16dp"
+                    tools:ignore="HardcodedText" />
+
+                <!-- Delete Button -->
+                <Button
+                    android:id="@+id/btnDelete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="50dp"
+                    android:backgroundTint="@color/phinmaGreen"
                     android:padding="16dp"
-                    android:background="@color/white">
-
-                    <!-- Event Title -->
-                    <TextView
-                        android:id="@+id/title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/josefinsans_regular"
-                        android:text="Event Title"
-                        android:textColor="@color/black"
-                        android:textSize="22sp"
-                        android:textStyle="bold"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
-                        tools:ignore="HardcodedText" />
-
-                    <!-- Date and Time -->
-                    <TextView
-                        android:id="@+id/dateTime"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/merriweather_regular"
-                        android:text="Date and Time"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
-                        tools:ignore="HardcodedText" />
-
-                    <!-- Location -->
-                    <TextView
-                        android:id="@+id/location"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/merriweather_regular"
-                        android:text="Location"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"
-                        tools:ignore="HardcodedText" />
-
-                    <!-- Event Description -->
-                    <TextView
-                        android:id="@+id/description"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/merriweather_regular"
-                        android:text="Event Description"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="16dp"
-                        tools:ignore="HardcodedText" />
-
-                    <!-- Delete Button -->
-                    <Button
-                        android:id="@+id/btnDelete"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:layout_marginTop="50dp"
-                        android:backgroundTint="@color/phinmaGreen"
-                        android:padding="16dp"
-                        android:text="Delete Event"
-                        android:textColor="@color/white"
-                        android:textSize="16sp"
-                        tools:ignore="HardcodedText" />
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-        </ScrollView>
-
-
-        <!--        DITO LANG SA GITNA OKIE-->
-
-
-        <!--        DAPAT LAGING NASA BABA TONG BOTTOM NAVIGATION BAR-->
-
-
-        <!--  vvvvv      FORBIDDEN ZONE   vvvvvvvvvvvv-->
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            style="@style/BottomNavigationView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
-        style="@style/SideDrawerView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start" />
-</androidx.drawerlayout.widget.DrawerLayout>
+                    android:text="Delete Event"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    tools:ignore="HardcodedText" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </ScrollView>
+</LinearLayout>
