--- a/app/src/main/res/layout/activity_modalities.xml
+++ b/app/src/main/res/layout/activity_modalities.xml
@@ -15,20 +15,18 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/topAppBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:background="@color/phinmaGreen"
             android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
-            app:navigationIcon="@drawable/ic_menu"
+            app:navigationIcon="@drawable/ic_back"
             app:navigationIconTint="@android:color/white"
             app:title="Modalities"
-            app:titleTextColor="@color/phinmaYellow"
-            app:menu="@menu/top_app_bar_menu" />
+            app:titleTextColor="@color/phinmaYellow" />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/topAppBar"
-            android:layout_above="@id/bottomNavigationView"
             android:fillViewport="true">
 
             <FrameLayout
@@ -44,8 +42,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             app:layout_constrainedHeight="true"
-            android:layout_below="@id/topAppBar"
-            android:layout_above="@id/bottomNavigationView">
+            android:layout_below="@id/topAppBar">
 
             <TextView
                 android:layout_width="match_parent"
@@ -77,20 +74,6 @@
                 android:scaleType="centerCrop" />
         </LinearLayout>
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            style="@style/BottomNavigationView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" />
-
     </RelativeLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
-        style="@style/SideDrawerView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
